--- a/app/src/main/res/layout/rules_activity.xml
+++ b/app/src/main/res/layout/rules_activity.xml
@@ -24,9 +24,9 @@
         app:srcCompat="@drawable/uit" />
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/textRules"
         android:layout_width="match_parent"
-        android:layout_height="618dp"
+        android:layout_height="match_parent"
         android:textColor="@color/colorText"
         android:textSize="17sp" />
 </LinearLayout>
