--- a/app/src/main/res/layout/tea_party_of_the_dead.xml
+++ b/app/src/main/res/layout/tea_party_of_the_dead.xml
@@ -99,7 +99,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="398dp"
         android:onClick="first"
-        android:text="Осмотреть тела"
+        android:text="@string/first"
         android:visibility="gone"
         style="@style/FaceButton"
         app:layout_constraintBottom_toTopOf="@+id/who"
@@ -112,7 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:onClick="second"
-        android:text="Поговорить с выжившей сестрой"
+        android:text="@string/second"
         android:visibility="gone"
         style="@style/FaceButton"
         app:layout_constraintBottom_toTopOf="@+id/who"
@@ -127,7 +127,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:onClick="third"
-        android:text="Поговорить с гримёршей"
+        android:text="@string/third"
         android:visibility="gone"
         style="@style/FaceButton"
         app:layout_constraintBottom_toTopOf="@+id/who"
@@ -140,7 +140,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:onClick="fourth"
-        android:text="Поговорить с оператором"
+        android:text="@string/fourth"
         android:visibility="gone"
         style="@style/FaceButton"
         app:layout_constraintBottom_toTopOf="@+id/who"
@@ -153,7 +153,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:onClick="fifth"
-        android:text="Поговорить с режиссёром"
+        android:text="@string/fifth"
         android:visibility="gone"
         style="@style/FaceButton"
         app:layout_constraintBottom_toTopOf="@+id/who"
@@ -183,7 +183,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:onClick="first_first"
-        android:text="Осмотреть сестру (Наталья Стурапова)"
+        android:text="@string/check_sister"
         android:visibility="gone"
         style="@style/FaceButton"
         app:layout_constraintBottom_toTopOf="@+id/who"
@@ -198,7 +198,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:onClick="first_second"
-        android:text="Осмотреть “отца” (Георгий Жирнов)"
+        android:text="@string/check_actor_father"
         android:visibility="gone"
         style="@style/FaceButton"
         app:layout_constraintBottom_toTopOf="@+id/who"
@@ -211,7 +211,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:onClick="first_third"
-        android:text="Осмотреть “гостя” (Макар Ларуев)"
+        android:text="@string/check_actor_guest"
         android:visibility="gone"
         style="@style/FaceButton"
         app:layout_constraintBottom_toTopOf="@+id/who"
