--- a/app/src/main/res/layout/are_you_shure_final.xml
+++ b/app/src/main/res/layout/are_you_shure_final.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBack"
-    tools:context=".AreYouShureFinal">
+    tools:context=".gameproces.AreYouShureFinal">
 
     <ImageView
         android:id="@+id/luci"
