--- a/app/src/main/res/layout/level_in_progres.xml
+++ b/app/src/main/res/layout/level_in_progres.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBack"
-    tools:context=".LevelInProgres">
+    tools:context=".gameproces.LevelInProgres">
 
     <TextView
         android:id="@+id/textView2"
